--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+             <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.3</version>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
